deploy/gateway/overlays/service-mesh/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway
spec:
  host: gateway
  subsets:
  - name: v1
    labels:
      version: v1
